implemented, set maximum people, saving and pubslihing settings #14

--- a/src/LocusImperiumApp/app/src/main/res/values/strings.xml
+++ b/src/LocusImperiumApp/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="EnterIpBox">Enter IP Address Of The Broker</string>
     <string name="enterIPText">Enter IP Address Of The Broker</string>
     <string name="rawText">Click Below</string>
+    <string name="string">Save</string>
     <string-array name="diffrentLoudness">
         <item>Quiet</item>
         <item>Moderate</item>
