added save button with saving functionallity #47
still lacks the functionallity to use the saved IP address as a wifi connection

--- a/src/LocusImperiumApp/app/src/main/res/values/strings.xml
+++ b/src/LocusImperiumApp/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="enterIPText">Enter IP Address Of The Broker</string>
     <string name="rawText">Click Below</string>
     <string name="string">Save</string>
+    <string name="saveip">Save</string>
     <string-array name="diffrentLoudness">
         <item>Quiet</item>
         <item>Moderate</item>
